# py_soundboard

./: .gitignore  .pre-commit-config.yaml  Pipfile  main.py  package.sh  pyproject.toml  requirements.txt  run.py  setup.py  soundboard.spec  soundboardrc
configs/: default.yaml  test.yaml
protos/: proto.proto
simple/yaml/: default.yaml
soundboard/: __init__.py  __main__.py  board.py  config.py  constants.py  controls.py  defines.py  enums.py  events.py  exceptions.py  host.py  http.py  main.py  mixer.py  mqtt.py  raw_controls.py  schema.py  signals.py  sounds.py  types.py  utils.py  vox.py
soundboard/client_api/: __init__.py
soundboard/config/: __init__.py  config.py
soundboard/controls/: __init__.py  controls.py  raw_controls.py
soundboard/schema/: __init__.py  fields.py  schema.py  utils.py
soundboard/templates/: list.html
soundboard/tests/: .fuse_hidden0000064600000046  .fuse_hidden000007fb00000045  conftest.py  interactive_controls_test.py  mocks.py  test.yaml  test_api.py  test_controls.py  test_schema.py  test_sound_set.py  test_sounds.py  test_vox.py  test_yaml.py
soundboard/tests/testboard/yaml/: test.yaml
